--- a/Mock-Foursquare-App/Storyboards/VenuesCollection.storyboard
+++ b/Mock-Foursquare-App/Storyboards/VenuesCollection.storyboard
@@ -24,10 +24,10 @@
                                 <blurEffect style="regular"/>
                             </visualEffectView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PSn-1l-N5Z">
-                                <rect key="frame" x="62" y="274" width="290" height="358"/>
+                                <rect key="frame" x="52" y="119" width="310.5" height="582"/>
                                 <subviews>
                                     <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Jo-73-FDs">
-                                        <rect key="frame" x="0.0" y="0.0" width="290" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="310.5" height="44"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <items>
                                             <barButtonItem style="plain" systemItem="flexibleSpace" id="CoP-e8-UG6"/>
@@ -41,35 +41,35 @@
                                         </items>
                                     </toolbar>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lgJ-Fi-7i8">
-                                        <rect key="frame" x="0.0" y="44" width="290" height="314"/>
+                                        <rect key="frame" x="0.0" y="44" width="310.5" height="538"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="venueCollectionCell" rowHeight="125" id="N1I-Vm-wHz" customClass="VenueCollectionTableCell" customModule="Mock_Foursquare_App" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="28" width="290" height="125"/>
+                                                <rect key="frame" x="0.0" y="28" width="310.5" height="125"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="N1I-Vm-wHz" id="pwQ-Gf-us4">
-                                                    <rect key="frame" x="0.0" y="0.0" width="290" height="125"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="310.5" height="125"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="lTB-Lj-vNQ">
-                                                            <rect key="frame" x="0.0" y="1" width="145" height="122.5"/>
+                                                            <rect key="frame" x="0.0" y="1" width="155.5" height="122.5"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurant Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DIl-0t-T1r">
-                                                            <rect key="frame" x="153" y="16" width="129" height="42.5"/>
+                                                            <rect key="frame" x="163.5" y="16" width="123" height="42.5"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lbn-G9-DAq">
-                                                            <rect key="frame" x="153" y="66.5" width="129" height="18"/>
+                                                            <rect key="frame" x="163.5" y="66.5" width="123" height="18"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="trailingMargin" secondItem="DIl-0t-T1r" secondAttribute="trailing" constant="-8" id="AJP-5T-pgq"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="DIl-0t-T1r" secondAttribute="trailing" constant="8" id="AJP-5T-pgq"/>
                                                         <constraint firstItem="DIl-0t-T1r" firstAttribute="top" secondItem="pwQ-Gf-us4" secondAttribute="topMargin" constant="5" id="Jxc-1V-J3D"/>
                                                         <constraint firstItem="lTB-Lj-vNQ" firstAttribute="leading" secondItem="pwQ-Gf-us4" secondAttribute="leading" id="MwZ-sc-Xxm"/>
                                                         <constraint firstItem="lTB-Lj-vNQ" firstAttribute="centerY" secondItem="pwQ-Gf-us4" secondAttribute="centerY" id="NPh-KR-aQk"/>
@@ -108,16 +108,17 @@
                             <constraint firstAttribute="bottom" secondItem="9Zp-mF-zkv" secondAttribute="bottom" id="FsX-S1-6iO"/>
                             <constraint firstItem="9Zp-mF-zkv" firstAttribute="leading" secondItem="URE-HB-A4U" secondAttribute="leading" id="MoZ-55-jQ0"/>
                             <constraint firstItem="9Zp-mF-zkv" firstAttribute="top" secondItem="3pg-ok-Eov" secondAttribute="top" id="UZY-Ru-9ax"/>
-                            <constraint firstItem="PSn-1l-N5Z" firstAttribute="width" secondItem="3pg-ok-Eov" secondAttribute="width" multiplier="0.7" id="WwL-y5-n4y"/>
-                            <constraint firstItem="PSn-1l-N5Z" firstAttribute="centerY" secondItem="URE-HB-A4U" secondAttribute="centerY" id="d3G-vr-G8d"/>
+                            <constraint firstItem="PSn-1l-N5Z" firstAttribute="width" secondItem="3pg-ok-Eov" secondAttribute="width" multiplier="0.75" id="WwL-y5-n4y"/>
+                            <constraint firstItem="PSn-1l-N5Z" firstAttribute="centerY" secondItem="URE-HB-A4U" secondAttribute="centerY" constant="-43" id="d3G-vr-G8d"/>
                             <constraint firstItem="9Zp-mF-zkv" firstAttribute="trailing" secondItem="URE-HB-A4U" secondAttribute="trailing" id="oZX-fS-cz8"/>
-                            <constraint firstItem="PSn-1l-N5Z" firstAttribute="height" secondItem="3pg-ok-Eov" secondAttribute="height" multiplier="0.4" id="vEc-Lh-DWC"/>
+                            <constraint firstItem="PSn-1l-N5Z" firstAttribute="height" secondItem="3pg-ok-Eov" secondAttribute="height" multiplier="0.65" id="vEc-Lh-DWC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="URE-HB-A4U"/>
                     </view>
                     <connections>
                         <outlet property="blurEffect" destination="9Zp-mF-zkv" id="JRH-2N-SRG"/>
                         <outlet property="tableView" destination="lgJ-Fi-7i8" id="8sQ-Ke-eDS"/>
+                        <outlet property="viewForTV" destination="PSn-1l-N5Z" id="3OI-TD-0rV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4yJ-Ys-jih" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
