--- a/Mock-Foursquare-App/Storyboards/CreateCollection.storyboard
+++ b/Mock-Foursquare-App/Storyboards/CreateCollection.storyboard
@@ -15,14 +15,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="enter name for collection" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pam-h5-cWd">
+                            <textField opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter name for collection" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pam-h5-cWd">
                                 <rect key="frame" x="20" y="150" width="374" height="44"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="RCE-nP-go6"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Give Collection a Name and a Photo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pBJ-xv-SOJ">
                                 <rect key="frame" x="20" y="84" width="374" height="26"/>
@@ -44,19 +44,19 @@
                                     <constraint firstAttribute="width" constant="44" id="Yyk-IL-xFR"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <state key="normal" backgroundImage="photo.on.rectangle" catalog="system"/>
+                                <state key="normal" backgroundImage="photo.fill.on.rectangle.fill" catalog="system"/>
                                 <connections>
                                     <action selector="pickPhotoButton:" destination="fdt-kC-sAk" eventType="touchUpInside" id="ooI-m6-cqA"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurants" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NQY-w4-oGl">
-                                <rect key="frame" x="76.5" y="303" width="261" height="26"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NQY-w4-oGl">
+                                <rect key="frame" x="76.5" y="316" width="261" height="0.0"/>
                                 <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="22"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Photo:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Yk-M0-L9K">
-                                <rect key="frame" x="140.5" y="447" width="133" height="26"/>
+                                <rect key="frame" x="62" y="447" width="133" height="26"/>
                                 <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="22"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -67,16 +67,16 @@
                             <constraint firstItem="NQY-w4-oGl" firstAttribute="width" secondItem="Rrg-tN-dGO" secondAttribute="width" multiplier="0.9" id="1eZ-H7-rP4"/>
                             <constraint firstItem="NQY-w4-oGl" firstAttribute="centerY" secondItem="Rrg-tN-dGO" secondAttribute="centerY" id="2Uy-zG-NJj"/>
                             <constraint firstItem="iWg-uQ-va6" firstAttribute="centerX" secondItem="Rrg-tN-dGO" secondAttribute="centerX" id="3uT-4R-HQv"/>
+                            <constraint firstItem="5Yk-M0-L9K" firstAttribute="leading" secondItem="Rrg-tN-dGO" secondAttribute="leading" id="6ZJ-YU-viI"/>
                             <constraint firstAttribute="trailing" secondItem="pBJ-xv-SOJ" secondAttribute="trailing" constant="20" id="7B8-FN-3sc"/>
                             <constraint firstItem="Rrg-tN-dGO" firstAttribute="centerX" secondItem="PDJ-Jv-Dtk" secondAttribute="centerX" id="7l7-fT-1xK"/>
                             <constraint firstItem="pBJ-xv-SOJ" firstAttribute="top" secondItem="3ES-h4-MwU" secondAttribute="top" constant="40" id="7xv-TA-uYm"/>
+                            <constraint firstItem="5XL-TE-sGD" firstAttribute="trailing" secondItem="Rrg-tN-dGO" secondAttribute="trailing" id="DX1-pd-b4q"/>
                             <constraint firstItem="3ES-h4-MwU" firstAttribute="trailing" secondItem="pam-h5-cWd" secondAttribute="trailing" constant="20" id="GEN-9c-FF5"/>
                             <constraint firstItem="NQY-w4-oGl" firstAttribute="centerX" secondItem="Rrg-tN-dGO" secondAttribute="centerX" id="GJt-ag-Jr3"/>
-                            <constraint firstItem="5Yk-M0-L9K" firstAttribute="centerX" secondItem="PDJ-Jv-Dtk" secondAttribute="centerX" id="Mkv-bC-S8X"/>
                             <constraint firstItem="Rrg-tN-dGO" firstAttribute="top" secondItem="pam-h5-cWd" secondAttribute="bottom" constant="10" id="Pzb-Oq-fjO"/>
                             <constraint firstItem="pam-h5-cWd" firstAttribute="leading" secondItem="3ES-h4-MwU" secondAttribute="leading" constant="20" id="aqi-xI-r45"/>
                             <constraint firstItem="5Yk-M0-L9K" firstAttribute="centerY" secondItem="5XL-TE-sGD" secondAttribute="centerY" id="csQ-aH-wsP"/>
-                            <constraint firstItem="5XL-TE-sGD" firstAttribute="trailing" secondItem="Rrg-tN-dGO" secondAttribute="trailing" id="dAL-Vm-JTg"/>
                             <constraint firstItem="Rrg-tN-dGO" firstAttribute="width" secondItem="PDJ-Jv-Dtk" secondAttribute="width" multiplier="0.7" id="hMQ-Dj-HQX"/>
                             <constraint firstItem="pBJ-xv-SOJ" firstAttribute="leading" secondItem="3ES-h4-MwU" secondAttribute="leading" constant="20" id="hQM-QN-c6X"/>
                             <constraint firstItem="5XL-TE-sGD" firstAttribute="top" secondItem="Rrg-tN-dGO" secondAttribute="bottom" constant="10" id="jYe-4o-APk"/>
@@ -104,7 +104,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="photo.on.rectangle" catalog="system" width="64" height="48"/>
+        <image name="photo.fill.on.rectangle.fill" catalog="system" width="64" height="48"/>
         <image name="restaurantPhoto" width="1536" height="1024"/>
     </resources>
 </document>
