--- a/Mock-Foursquare-App/Storyboards/VenuesCollection.storyboard
+++ b/Mock-Foursquare-App/Storyboards/VenuesCollection.storyboard
@@ -40,6 +40,16 @@
                                             <barButtonItem style="plain" systemItem="flexibleSpace" id="QMD-ef-osK"/>
                                         </items>
                                     </toolbar>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="68h-MZ-Hms">
+                                        <rect key="frame" x="0.0" y="44" width="310.5" height="538"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This Collection is Empty" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T50-SN-sBJ">
+                                        <rect key="frame" x="71" y="303" width="168.5" height="20"/>
+                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lgJ-Fi-7i8">
                                         <rect key="frame" x="0.0" y="44" width="310.5" height="538"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -52,7 +62,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="310.5" height="125"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="lTB-Lj-vNQ">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="lTB-Lj-vNQ">
                                                             <rect key="frame" x="0.0" y="1" width="155.5" height="122.5"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurant Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DIl-0t-T1r">
@@ -92,13 +102,19 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="68h-MZ-Hms" firstAttribute="leading" secondItem="lgJ-Fi-7i8" secondAttribute="leading" id="4dx-WP-Cei"/>
                                     <constraint firstAttribute="trailing" secondItem="lgJ-Fi-7i8" secondAttribute="trailing" id="7lX-Wv-5AL"/>
+                                    <constraint firstItem="68h-MZ-Hms" firstAttribute="trailing" secondItem="lgJ-Fi-7i8" secondAttribute="trailing" id="Ej5-1V-Hnh"/>
+                                    <constraint firstItem="T50-SN-sBJ" firstAttribute="centerY" secondItem="lgJ-Fi-7i8" secondAttribute="centerY" id="I5s-qu-4Ks"/>
+                                    <constraint firstItem="T50-SN-sBJ" firstAttribute="centerX" secondItem="lgJ-Fi-7i8" secondAttribute="centerX" id="K51-D2-b1H"/>
                                     <constraint firstItem="lgJ-Fi-7i8" firstAttribute="leading" secondItem="PSn-1l-N5Z" secondAttribute="leading" id="L4g-4K-HBR"/>
                                     <constraint firstItem="4Jo-73-FDs" firstAttribute="width" secondItem="PSn-1l-N5Z" secondAttribute="width" id="LSA-gC-b66"/>
                                     <constraint firstItem="4Jo-73-FDs" firstAttribute="top" secondItem="PSn-1l-N5Z" secondAttribute="top" symbolic="YES" id="M70-bj-EtJ"/>
+                                    <constraint firstItem="68h-MZ-Hms" firstAttribute="bottom" secondItem="lgJ-Fi-7i8" secondAttribute="bottom" id="iuS-ZZ-uXG"/>
                                     <constraint firstAttribute="bottom" secondItem="lgJ-Fi-7i8" secondAttribute="bottom" id="kHF-I1-PsM"/>
                                     <constraint firstItem="lgJ-Fi-7i8" firstAttribute="top" secondItem="4Jo-73-FDs" secondAttribute="bottom" symbolic="YES" id="mIU-Pg-OQE"/>
                                     <constraint firstItem="4Jo-73-FDs" firstAttribute="leading" secondItem="PSn-1l-N5Z" secondAttribute="leading" symbolic="YES" id="rOY-uh-sQh"/>
+                                    <constraint firstItem="68h-MZ-Hms" firstAttribute="top" secondItem="lgJ-Fi-7i8" secondAttribute="top" id="sNQ-l7-aZW"/>
                                 </constraints>
                             </view>
                         </subviews>
